# ase-json

./: CMakeLists.txt  README.md  VERSION
.claude/: settings.json
include/ase/json/: json.hpp  version.hpp.in
